--- a/app/views/apprenticeships/home/supplier_search2.html.erb
+++ b/app/views/apprenticeships/home/supplier_search2.html.erb
@@ -10,7 +10,7 @@
     </p>
     <p><%= t('.apply_filters') %></p>
 
-    <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
+    <%= form_tag apprenticeships_search_path, method: :get do %>
       <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-one-third">
