FM25-28 filtering changes and supplier list bug fix.

--- a/app/views/facilities_management/long_list/long_list.html.erb
+++ b/app/views/facilities_management/long_list/long_list.html.erb
@@ -1,6 +1,6 @@
 <a href="/facilities-management/select-services" class="govuk-back-link ccs-no-print">Back</a>
 
-<%= render('errors/inline_error') %>
+<%= render('errors/inline_error_summary') %>
 
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
