--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -1,6 +1,6 @@
 <a href="/facilities-management" class="govuk-back-link">Back</a>
 
-<%= render('errors/inline_error') %>
+<%= render('errors/inline_error_summary') %>
 
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
@@ -37,6 +37,7 @@
                         <%= value2 %>
                       </label>
                     </div>
+                  </div>
                 </fieldset>
               </div>
             <% end %>
@@ -61,6 +62,7 @@
                   International coverage
                 </label>
               </div>
+            </div>
           </fieldset>
         </div>
       </div>
