--- a/app/views/facilities_management/long_list/_lot1c.html.erb
+++ b/app/views/facilities_management/long_list/_lot1c.html.erb
@@ -8,6 +8,7 @@
   <tbody class="govuk-table__body">
   <% @suppliers_lot1c.each do |supplier| %>
     <tr class="govuk-table__row">
+    <tr id="<%= SecureRandom.uuid %>" class="govuk-table__row" servicecode="<%= supplier['service_code'] %>" regioncode="<%= supplier['region_code'] %>" >
       <td class="govuk-table__header" scope="row"><%= supplier['name'] %></td>
     </tr>
     </tbody>
