--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -1,6 +1,6 @@
 <a href="/facilities-management/select-locations" class="govuk-back-link">Back</a>
 
-<%= render('errors/inline_error') %>
+<%= render('errors/inline_error_summary') %>
 
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
