--- a/app/views/apprenticeships/home/_search_apprenticeship.html.erb
+++ b/app/views/apprenticeships/home/_search_apprenticeship.html.erb
@@ -9,7 +9,7 @@
   <div class="govuk-grid-column-one-third ccs-at-results-list__providers">
     <div>
       <span class="govuk-!-font-size-16">
-        <span class="govuk-!-font-size-27"><%= result[:providers] %></span> 
+        <span class="govuk-!-font-size-27 ccs-font--wrap"><%= result[:providers] %></span> 
         <%= t('apprenticeships.home.search_results.providers_label') %>
       </span>
     </div>
