--- a/app/views/apprenticeships/home/training_details.html.erb
+++ b/app/views/apprenticeships/home/training_details.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :page_title, t('.page_title') %>
 <%= content_for :page_section, t('apprenticeships.page_section') %>
-
+xxxxxxx
 <%= form_tag apprenticeships_search_results_path, method: :get do %>
   <label class="govuk-label govuk-label--m" for="search">
     <%= t('Training provider details STUB') %>
