--- a/app/views/apprenticeships/home/supplier_search.html.erb
+++ b/app/views/apprenticeships/home/supplier_search.html.erb
@@ -22,10 +22,10 @@
 </div>
 
 <div class="govuk-grid-row govuk-!-padding-top-4 ccs-at-results-pg">
-  <%= form_tag apprenticeships_search_path, method: :get, id: 'supplier-results-form' do %>
 
-    <section id="ccs-at-results-filters" class="govuk-grid-column-one-third ccs-at-results-filters">
-      
+  <section id="ccs-at-results-filters" class="govuk-grid-column-one-third ccs-at-results-filters">
+    <%= form_tag apprenticeships_search_path, method: :get, id: 'supplier-results-form' do %><!-- form inside section element-->
+
       <div class="govuk-form-group ccs-at-results-filters__heading-bloc">
         <h2 class="govuk-!-width-two-thirds govuk-heading-m">
           <%= t('.apply_filters_label') %>
@@ -362,218 +362,50 @@
       </div> 
 
 
+    <% end %> 
+  </section>
 
+  <section id="ccs-at-search-results" class="govuk-grid-column-two-thirds ccs-at-search-results">
+  
+    <table class="govuk-table">
+      
+      <caption class="govuk-table__caption ccs-at-remove">Results</caption>
 
-    </section>
+      <thead class="govuk-table__head">
+        <tr class="govuk-table__row">
+          <th class="govuk-table__header" scope="col">Training provider</th>
+          <th class="govuk-table__header" scope="col">Distance</th>
+        </tr>
+      </thead>
+      <tbody class="govuk-table__body">
 
-    <section id="ccs-at-search-results" class="govuk-grid-column-two-thirds ccs-at-search-results">
+        <!--example of tr with National tag starts -->
+        <tr class="govuk-table__row">
+            <td class="govuk-table__cell">
+                <a href="/" class="govuk-heading-s govuk-link--no-visited-state ccs-no-underline">
+                    Example provider title <span class="govuk-!-font-size-14 ccs-tag">National</span>
+                </a>
+                <b>Ofsted:</b> 3 - Requires improvement
+            </td>
+            <td class="govuk-table__cell">
+                <span class="govuk-!-font-size-19">
+                    <b><span>12</span> miles</b>
+                </span>
+            </td>
+        </tr>
+        <!-- example of tr with National tag ends -->
 
-    </section>
+        <% supplier_results.each do |result| %>
+          <%= render 'search_provider', result: result %>
+        <% end %>
 
-  <% end %>  
-</div>
+      </tbody>
+    </table>             
 
-<br>
-xxxxxxxxxxxxxxxxxxxxxxxxx
-<hr>
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.training provider results') %></h1>
-
-
-
-
-
-    <%= form_tag apprenticeships_search_path, method: :get do %>
-      <div class="govuk-grid-row">
-
-        <div class="govuk-grid-column-one-third">
-
-          <h2 class="govuk-heading-m"><%= t('.apply_filters_label') %></h2>
-
-          <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'ccs-no-print' %>
-
-          <div class="cmp-sidebar">
-            <h2 class="govuk-heading-s"><%= t('.Overall Ofsted rating') %></h2>
-
-            <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% ofsted_rating.each do |rating| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "rating[]",
-                              rating,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "rating_#{rating}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="rating_<%= rating %>">
-                        <%= rating %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset>
-            </div>
-
-           <h2 class="govuk-heading-s"><%= t('.Course Ofsted rating') %></h2>
-	   <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% course_rating.each do |course| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "course[]",
-                              course,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "course_#{course}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
-                        <%= course %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset> 
-            </div>
-
-         <h2 class="govuk-heading-s"><%= t('.Provider experience ') %></h2>
-           <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% provider_experience.each do |course| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "course[]",
-                              course,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "course_#{course}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
-                        <%= course %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset>
-            </div>
-
-         <h2 class="govuk-heading-s"><%= t('.Delivery method ') %></h2>
-           <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% delivery_method.each do |course| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "course[]",
-                              course,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "course_#{course}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
-                        <%= course %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset>
-            </div>
-
-         <h2 class="govuk-heading-s"><%= t('.Time demand') %></h2>
-           <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% time_demand.each do |course| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "course[]",
-                              course,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "course_#{course}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
-                        <%= course %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset>
-            </div>
-
-          <h2 class="govuk-heading-s"><%= t('.Classroom sharing ') %></h2>
-           <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% classroom_sharing.each do |course| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "course[]",
-                              course,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "course_#{course}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
-                        <%= course %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset>
-            </div>
-
-         <h2 class="govuk-heading-s"><%= t('.Training availability ') %></h2>
-           <div class="govuk-form-group">
-              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
-                <div class="govuk-checkboxes">
-                  <% training_availability.each do |course| %>
-                    <div class="govuk-checkboxes__item">
-                      <%= check_box_tag(
-                              "course[]",
-                              course,
-                              false,
-                              class: "govuk-checkboxes__input",
-                              id: "course_#{course}"
-                          ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
-                        <%= course %>
-                      </label>
-                    </div>
-                  <% end %>
-                </div>
-              </fieldset>
-       </div>
-          </div>
-        </div>
- 
-
-<table class="govuk-table">
-  <caption class="govuk-table__caption">Dates and amounts</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Date</th>
-      <th class="govuk-table__header" scope="col">Amount</th>
-    </tr>
-  </thead>
-	  <div class="govuk-grid-column-two-thirds">
-          <div>
-            <h2 class="govuk-heading-m"><%= t('.sort_by_label') %></h2>
-
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <% supplier_results.each do |result| %>
-              <%= render 'search_apprenticeship', result: result %>
-            <% end %>
-
-            <%= link_to t('common.next'), '#', class: 'govuk-link' %>
-          </div>
-        </div>
-      </div>
+    <%= link_to '/apprenticeships/training_details', class: 'govuk-link govuk-!-font-size-19 govuk-link--no-visited-state ccs-at-next' do %>
+      <%= t('common.next')%><span>&nbsp;&rarr;</span>
     <% end %>
-  </div>
+
+  </section>
+ 
 </div>
