--- a/app/views/supply_teachers/branches/show.html.erb
+++ b/app/views/supply_teachers/branches/show.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="govuk-grid-column-one-third">
         <p>
-          <strong><%= t('c.address') %></strong>:<br/>
+          <strong><%= t('supply_teachers.branches.branch.address') %></strong>:<br/>
           <%= @branch.address_1 %><br/>
           <%= @branch.address_2 %><br/>
           <%= @branch.town %><br/>
