FM-51 added contract extensions

--- a/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
@@ -1,5 +1,3 @@
-
-
 <div id="fm-contract-extension-error-form-group" class="govuk-form-group">
   <span id="fm-contract-extension-error" class="govuk-error-message govuk-visually-hidden">
       <span class="govuk-visually-hidden">Error:</span> todo put some error message here
@@ -17,14 +15,26 @@
     </legend>
     <div class="govuk-radios govuk-radios">
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="contract-extension-1" name="contract-extension-radio" type="radio" value="yes">
-        <label class="govuk-label govuk-radios__label" for="contract-extension-1">
+        <input class="govuk-radios__input" id="fm-contract-extension-yes" name="contract-extension-radio" type="radio" value="yes">
+        <label class="govuk-label govuk-radios__label" for="fm-contract-extension-yes">
           Yes
         </label>
+        <div id="fm-contract-yes-container" name="fm-extension-container" hidden>
+          <div id="fm-extensions" class="govuk-details__text" >
+            <div id="fm-extension-1-container">
+              <div id="fm-extension-1-error" hidden><span class="govuk-error-message">This field can not be empty</span></div>
+              <input class="govuk-!-margin-bottom-0" id="fm-extension-1" name="fm-extension" type="number" placeholder="Extension 1"/>
+            </div>
+          </div>
+          <div>
+            <a class="govuk-link" id="fm-add-another-extension-link" role="button" href="">+ Add another
+              (<span id="fm-remaining-extension-count"></span><span> remaining)</span></a>
+          </div>
+        </div>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="contract-extension-1" name="contract-extension-radio" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="contract-extension-2">
+        <input class="govuk-radios__input" id="fm-contract-extension-no" name="contract-extension-radio" type="radio" value="no">
+        <label class="govuk-label govuk-radios__label" for="fm-contract-extension-no">
           No
         </label>
       </div>
